# Manifold

./: .dockerignore  .gitignore  BACKLOG.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  LICENSE-MIT  NOTICE.md  README.md  SECURITY.md  railway.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  windows.yml
audit/: perf-pass.json
crates/app/: Cargo.toml  build.rs  tauri.conf.json
crates/app/src/: advisor.rs  ai.rs  altopt.rs  buildqueue.rs  chat.rs  cutover.rs  empires.rs  import.rs  jobs.rs  lib.rs  main.rs  opportunities.rs  session.rs  tokens.rs  wizard.rs
crates/app/tests/: advisor.rs  ai_rank.rs  altopt.rs  buildqueue.rs  cutover.rs  import.rs  nodes.rs  opportunities.rs  proposals.rs  session.rs
crates/gamedata/: Cargo.toml
crates/gamedata/assets/: docs-fixture.json  world-nodes.json
crates/gamedata/src/: assets.rs  db.rs  docs.rs  lib.rs  worldnodes.rs
crates/persist/: Cargo.toml
crates/persist/src/: lib.rs  memory.rs  plan_file.rs  store.rs
crates/persist/tests/: memory_parity.rs
crates/planner-core/: Cargo.toml
crates/planner-core/src/: commands.rs  entities.rs  layout.rs  lib.rs  patch.rs  proposals.rs  state.rs  transport.rs  undo.rs
crates/solver/: Cargo.toml
crates/solver-wasm/: Cargo.toml
crates/solver-wasm/src/: lib.rs
crates/solver/src/: lib.rs  model.rs  t0.rs  t1.rs
crates/solver/tests/: golden.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
deploy/: Caddyfile  Dockerfile
design-reference/: FICSIT Planner - Foundations.dc.html
docs/: 00-handoff.md  01-design-brief.md  02-ui-spec.md  03-addendum-a.md  04-sdd.md
fixtures/: README.md
renderer/: .gitignore  index.html  package.json  playwright.config.ts  playwright.visual.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  seed.mjs  shot.mjs  tsconfig.tsbuildinfo  vite.config.ts
renderer/e2e/: a-resume-dashboard.spec.ts  audit-graph.spec.ts  audit-import.spec.ts  audit-make.spec.ts  audit-map.spec.ts  audit-planner-core.spec.ts  audit-power.spec.ts  audit-session.spec.ts  claim-move.spec.ts  claim-release-reclaim.spec.ts  claim-tier.spec.ts  desktop-sync.spec.ts  empires.spec.ts  exit-criterion.spec.ts  expand-flow.spec.ts  flow-band.spec.ts  geyser-claim.spec.ts  graph-context-menu.spec.ts  graph-motion.spec.ts  graph-search.spec.ts  graph-tools.spec.ts  helpers.ts  inspector-context.spec.ts  make-capacity.spec.ts  make-reuse.spec.ts  make-tidy.spec.ts  mobile-dashboard.spec.ts  new-empire.spec.ts  node-filter.spec.ts  phase2-empire.spec.ts  phase3-proposals.spec.ts  phase4-import.spec.ts  phase5-advisor.spec.ts  phase6-errors.spec.ts  pin-drag.spec.ts  pipe-junction.spec.ts  pipe-route.spec.ts  resource-overview.spec.ts  scrollable-pickers.spec.ts  w1c-buildqueue.spec.ts  (+7 more)
renderer/e2e-visual/: map-visual.spec.ts  report.mjs  vh.ts
renderer/e2e-web/: audit-web-docs.spec.ts  web-smoke.spec.ts
renderer/src/: App.tsx  base.css  main.tsx
renderer/src/advisor/: AdvisorPanel.tsx  advisor.css
renderer/src/ai/: webllm.ts  webllmWorker.ts
renderer/src/audit/: AuditDrawer.tsx  audit.css
renderer/src/dashboard/: AiSettings.tsx  Dashboard.tsx  dashboard.css
renderer/src/graph/: AddGroupMenu.tsx  AddPortMenu.tsx  BeltEdgeView.tsx  BoundaryPortNode.tsx  BuildSheet.tsx  FloorPlates.tsx  GraphContextMenu.tsx  GraphSearch.tsx  GraphView.tsx  Inspector.tsx  JunctionNode.tsx  MachineGroupNode.tsx  MakeFromResources.tsx  ReceiveFromFactory.tsx  RecipeStrip.tsx  SendToFactory.tsx  buildSheet.ts  buildSheetModel.ts  buildsheet.css  edgeLayout.test.ts  edgeLayout.ts  footprints.ts  graph.css  graphMotion.test.ts  graphMotion.ts  interFactorySupply.ts  makeChain.test.ts  makeChain.ts  makeFromResources.test.ts
renderer/src/import/: ImportModal.tsx  parseSave.ts  parseSnapshot.test.ts  parseWorker.ts  saveHandle.ts  syncSource.ts
renderer/src/lib/: ItemCombobox.tsx  ItemIcon.tsx  format.test.ts  format.ts  iconManifest.json  useDismiss.ts
renderer/src/map/: CanvasLayer.ts  Legend.tsx  MapView.tsx  NodeDrawer.tsx  ResourceOverview.tsx  RouteDrawer.tsx  RoutePopover.tsx  SearchBox.tsx  SummaryDrawer.tsx  SwitchDrawer.tsx  TrainAnswerBlock.tsx  claimPorts.test.ts  claimPorts.ts  map.css  maputil.ts  smoothZoom.test.ts  smoothZoom.ts  trainAnswer.ts  zoomEase.ts
renderer/src/mobile/: MobileDashboard.tsx
renderer/src/proposal/: ProposalReview.tsx  proposal.css
renderer/src/shell/: BootScreen.tsx  DataMenu.tsx  Onboarding.tsx  StatusBar.tsx  Titlebar.tsx  ToastHost.tsx  bootSim.test.ts  bootSim.ts  shell.css  useLayoutMode.ts
renderer/src/solver/: t0.ts
renderer/src/state/: backend.ts  errors.test.ts  errors.ts  patch.ts  store.ts  transport.test.ts  types.test.ts  types.ts  wasmBackend.ts  wasmWorker.ts
renderer/src/tokens/: tokens.css  tokens.ts
renderer/src/wasm/pkg/: .solver-src.sha256  package.json  solver_wasm.d.ts  solver_wasm.js  solver_wasm_bg.wasm  solver_wasm_bg.wasm.d.ts
renderer/src/wasm/web-pkg/: .web-src.sha256  package.json  web_bg.wasm
renderer/src/wizard/: WizardModal.tsx  wizard.css
scripts/: check-icon-manifest.mjs  fetch-icons.mjs  gen-world-nodes.py  regen-wasm.sh  regen-web-wasm.sh
