[workspace]
resolver = "2"
members = [
    "crates/planner-core",
    "crates/solver",
    "crates/solver-wasm",
    "crates/gamedata",
    "crates/persist",
    "crates/app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ulid = { version = "1", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }
good_lp = { version = "1.15", default-features = false, features = ["microlp"] }
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
