[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["shell"]
# The Tauri desktop shell. The dev-bridge binary builds without it, so a
# container lacking WebKitGTK can still drive the full core headlessly.
shell = ["dep:tauri", "dep:tauri-plugin-opener", "dep:tauri-build"]

[[bin]]
name = "app"
path = "src/main.rs"
required-features = ["shell"]

[[bin]]
name = "gen-tokens"
path = "src/bin/gen_tokens.rs"

[[bin]]
name = "dev-bridge"
path = "src/bin/dev_bridge.rs"

[dependencies]
planner-core = { path = "../planner-core" }
solver = { path = "../solver" }
gamedata = { path = "../gamedata" }
persist = { path = "../persist" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tauri = { version = "2", optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tiny_http = "0.12"

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dev-dependencies]
tempfile = "3.27.0"
