[package]
name = "solver-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solver = { path = "../solver", default-features = false }
wasm-bindgen = "0.2"
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"

# wasm-opt needs a github download the build environment may not allow;
# the unoptimized module is ~40KB — optimize when a toolchain is present.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
